# clf-parser

./: Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml
src/: clf.rs  deserialize.rs  lib.rs
